implementing the upload, removal and fetching of prodcut images in s3
